Completed initial draft of the website.

--- a/board.html
+++ b/board.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" type="text/css" href="stylesheets/dismas.css">
   <link href='https://fonts.googleapis.com/css?family=Fredericka+the+Great' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Lato:400,400italic' rel='stylesheet' type='text/css'>
-  <title>Saint Dismas - Greeting Card Program </title>
+  <title>Saint Dismas - Board of Directors</title>
 </head>
 
 <body>
@@ -86,25 +86,48 @@
       <div class="col-xs-12 col-sm-4 col-md-3">
         <aside class="text-center">
           <p>
-            "Remember those in prison,
-            <br>as if you were in prison with them,
-            <br>and those who are mistreated as if
-            <br>you yourselves were suffering."
-            <br>&mdash;Hebrews 13:3
-            <br>
+            “For God so loved the world,
+            <br>that he gave his only Son,
+            <br>that whoever believes in him
+            <br> should not perish but have eternal life.
+            <br>&mdash;John 3:16
           </p>
-          <img src="images/jesus-painting.jpg" class="side-image" alt="Painting of Jesus with thorns on head and blood dribbling down his cheek." />
+          <img src="images/jesus_bars_art_small.jpg" alt="Artist rendering of Jesus in Prison, and the cell being locked." />
         </aside>
       </div>
       <div class="col-xs-12 col-sm-8 col-md-9 main-text">
-        <h1 class="text-center ftg">Greeting Card Program</h1>
-        <p class="bring-down">
-          Prison inmates who are serving long sentences often lose family ties and meaningful friendships over the decades that they are incarcerated. Many never even receive mail.
+        <h1 class="text-center ftg">Board of Directors</h1>
+        <p class="cursive">
+          And because we, the church, are now His representatives on earth, prison is where we should be as well — calling the sick to the healing touch of  Jesus the Savior.    Still recognizing in those inmates, the dignity of God’s creation, no matter how far they have fallen; trusting that no one — NO ONE —is beyond Christ’s power to love , forgive and redeem.
         </p>
-        <p>
-          Recognizing the need to encourage communication and help make it possible, the Saint Dismas Foundation was instrumental in starting a free greeting card program many years ago. Since 2006, approximately 100,000 cards have been provided free to any inmate that requests them from the Chaplain.
-        </p>
-        <img src="images/prison-block.jpg" class="main-column-img center-block responsive" alt="Black and white image of long prison block, empty cells all along the sides.">
+        <h2 class="text-center ftg">
+          SAINT DISMAS PRISON MINISTRY FOUNDATION INC<br>
+          2014-2015
+        </h2>
+        <h4 class="text-center ftg">
+          <p>
+            REV. DEACON DONALD BATTISTON
+          </p>
+          <p>
+            WILLIAM CONNELL
+          </p>
+          <p>
+            MARY E. LUPO
+          </p>
+          <p>
+            REV. DEACON GEORGE KINARD
+          </p>
+          <p>
+            PHILIP JEKANOWSKI
+          </p>
+          <p>
+            WILLIAM C. MATTISON
+          </p>
+          <p>
+            NO DIRECTORS RECEIVE ANY FORM OF COMPENSATION
+          </p>
+        </h4>
+        <img src="images/confirmation.JPG" class="main-column-img center-block responsive" alt="Inmates posing with the minsitry Deacons after their confirmation">
       </div>
     </div>
   </div>
