--- a/donations.html
+++ b/donations.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" type="text/css" href="stylesheets/dismas.css">
   <link href='https://fonts.googleapis.com/css?family=Fredericka+the+Great' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Lato:400,400italic' rel='stylesheet' type='text/css'>
-  <title>Saint Dismas - Greeting Card Program </title>
+  <title>Saint Dismas - Veteran Posts</title>
 </head>
 
 <body>
@@ -86,25 +86,30 @@
       <div class="col-xs-12 col-sm-4 col-md-3">
         <aside class="text-center">
           <p>
-            "Remember those in prison,
-            <br>as if you were in prison with them,
-            <br>and those who are mistreated as if
-            <br>you yourselves were suffering."
-            <br>&mdash;Hebrews 13:3
-            <br>
+            “For God so loved the world,
+            <br>that he gave his only Son,
+            <br>that whoever believes in him
+            <br> should not perish but have eternal life.
+            <br>&mdash;John 3:16
           </p>
-          <img src="images/jesus-painting.jpg" class="side-image" alt="Painting of Jesus with thorns on head and blood dribbling down his cheek." />
+          <img src="images/jesus-painting.jpg" alt="Painting of Jesus wearing a crown of thorns and with blood dribbling down his cheeks." />
         </aside>
       </div>
       <div class="col-xs-12 col-sm-8 col-md-9 main-text">
-        <h1 class="text-center ftg">Greeting Card Program</h1>
+        <h1 class="text-center ftg">How to Help</h1>
         <p class="bring-down">
-          Prison inmates who are serving long sentences often lose family ties and meaningful friendships over the decades that they are incarcerated. Many never even receive mail.
+          The only hope for an inmate to change his life is to "catch a glimpse" of the loving and forgiving Christ in those who minister to them. Your prayers and donations help us to do that better.
         </p>
         <p>
-          Recognizing the need to encourage communication and help make it possible, the Saint Dismas Foundation was instrumental in starting a free greeting card program many years ago. Since 2006, approximately 100,000 cards have been provided free to any inmate that requests them from the Chaplain.
+          If you have questions or would like to assist us in this Corporal work of mercy, we invite you to contact us or contribute (tax deductible) to:
+          <div class="text-center ftg larger">
+            Saint Dismas Prison Ministry Foundation<br>
+            1701 Indian Creek Parkway<br>
+            Jupiter, Florida 33458<br>
+            561-662-0832
+          </div>
         </p>
-        <img src="images/prison-block.jpg" class="main-column-img center-block responsive" alt="Black and white image of long prison block, empty cells all along the sides.">
+        <img src="images/three-crosses.jpg" class="main-column-img center-block responsive" alt="Image of one man helping another top a mountain.">
       </div>
     </div>
   </div>
