--- a/funds.html
+++ b/funds.html
@@ -65,14 +65,14 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">How To Help <span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><a href="#">Action</a></li>
+                <li><a href="donations.html">Donations</a></li>
                 <li><a href="#">Another action</a></li>
                 <li><a href="#">Something else here</a></li>
                 <li role="separator" class="divider"></li>
                 <li><a href="#">Separated link</a></li>
               </ul>
             </li>
-            <li><a href="#">Board of Directors</a></li>
+            <li><a href="board.html">Board of Directors</a></li>
           </ul>
         </div>
         <!-- /.navbar-collapse -->
@@ -103,9 +103,6 @@
           The Foundation makes direct deposits to the Inmate Trust Fund in the name of qualified indigent inmates (usually $10) to enable them to purchase personal hygeiene supplies (deoderant, toothpaste, etc.) which are not supplied by the prison.
         </p>
           <img src="images/confirmation.JPG" class="main-column-img center-block responsive" alt="Two champlains and two prisoners celebrating a confirmation.">
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </p>
       </div>
     </div>
   </div>
