--- a/art-program.html
+++ b/art-program.html
@@ -65,14 +65,14 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">How To Help <span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><a href="#">Action</a></li>
+                <li><a href="donations.html">Donations</a></li>
                 <li><a href="#">Another action</a></li>
                 <li><a href="#">Something else here</a></li>
                 <li role="separator" class="divider"></li>
                 <li><a href="#">Separated link</a></li>
               </ul>
             </li>
-            <li><a href="#">Board of Directors</a></li>
+            <li><a href="board.html">Board of Directors</a></li>
           </ul>
         </div>
         <!-- /.navbar-collapse -->
