Made minor corrections and edits.

--- a/board.html
+++ b/board.html
@@ -127,7 +127,7 @@
             NO DIRECTORS RECEIVE ANY FORM OF COMPENSATION
           </p>
         </h4>
-        <img src="images/confirmation.JPG" class="main-column-img center-block responsive" alt="Inmates posing with the minsitry Deacons after their confirmation">
+        <img src="images/farm2.JPG" class="main-column-img center-block responsive" alt="Group picture of inmates, Deacon, and other officials displaying the fruits of their labor.">
       </div>
     </div>
   </div>
