--- a/farm-program.html
+++ b/farm-program.html
@@ -100,7 +100,7 @@
       </div>
       <div class="col-xs-12 col-sm-8 col-md-9 main-text">
         <h1 class="text-center ftg">Farm Program</h1>
-        <p class="bring-down">
+        <p class="bring-down text-center">
           This is a chapel program that Saint Dismas not only sponsors but also started.
         </p>
         <img src="images/farm.jpg" class="main-column-img center-block responsive" alt="Deacon holding vegetables just harvested by the inmates working in the background.">
