Changed names of images due to heroku issues.

--- a/art-program.html
+++ b/art-program.html
@@ -101,7 +101,7 @@
         <p class="bring-down">
           God has gifted some inmates with art talent. It has been said, "When we make art, we become the art we are making . . . it’s kind of a circle!!!”
         </p>
-        <img src="images/sculpture.jpg" class="main-column-img center-block responsive" alt="Sculpture of Jesus's head, created by an inmate in the art program.">
+        <img src="images/sculpture.JPG" class="main-column-img center-block responsive" alt="Sculpture of Jesus's head, created by an inmate in the art program.">
         <p>
           The inmate artist works on the art and the art works on the inmate. It encourages self-expression, reduces anger and frustration, helps to control aggression, combats depression and helps to heal ones brokenness. Most important, however, it gives the inmate the realization and appreciation of God’s gift of talent to the inmate artist.
         </p>
