Again, made jpg capital due to heroku issue.

--- a/art-program.html
+++ b/art-program.html
@@ -105,7 +105,7 @@
         <p>
           The inmate artist works on the art and the art works on the inmate. It encourages self-expression, reduces anger and frustration, helps to control aggression, combats depression and helps to heal ones brokenness. Most important, however, it gives the inmate the realization and appreciation of God’s gift of talent to the inmate artist.
         </p>
-        <img src="images/sculpture2.jpg" class="main-column-img center-block responsive" alt="Another sculpture of Jesus's head, created by an inmate in the art program.">
+        <img src="images/sculpture2.JPG" class="main-column-img center-block responsive" alt="Another sculpture of Jesus's head, created by an inmate in the art program.">
       </div>
     </div>
   </div>
