--- a/farm-program.html
+++ b/farm-program.html
@@ -103,7 +103,7 @@
         <p class="bring-down text-center">
           This is a chapel program that Saint Dismas not only sponsors but also started.
         </p>
-        <img src="images/farm.jpg" class="main-column-img center-block responsive" alt="Deacon holding vegetables just harvested by the inmates working in the background.">
+        <img src="images/farm.JPG" class="main-column-img center-block responsive" alt="Deacon holding vegetables just harvested by the inmates working in the background.">
     </div>
   </div>
 
@@ -120,7 +120,7 @@
         <p>
           Saint Dismas Prison Ministry provided all the initial tools, hoses, seedd, boots, and printed manuals to get the inmates started, along with lemonade to help combat the heat and sweat of a hard day's work
         </p>
-        <img src="images/farm1.jpg" class="main-column-img center-block responsive" alt="Inmate working in the farm field, posing with a Deacon and another official.">
+        <img src="images/farm1.JPG" class="main-column-img center-block responsive" alt="Inmate working in the farm field, posing with a Deacon and another official.">
     </div>
   </div>
 
@@ -136,7 +136,7 @@
         <p>
           The program supplies the prison commissary with thousands of pounds of fresh produce at no cost to the prison.
         </p>
-        <img src="images/farm2.jpg" class="main-column-img center-block responsive" alt="Group picture of inmates, Deacon, and other officials displaying the fruits of their labor.">
+        <img src="images/farm2.JPG" class="main-column-img center-block responsive" alt="Group picture of inmates, Deacon, and other officials displaying the fruits of their labor.">
     </div>
   </div>
 
