--- a/cvli-license.html
+++ b/cvli-license.html
@@ -101,7 +101,7 @@
           The CVLI License, which allows the Prisons at MCI and OCI
           to view Movies, is held and paid for by The Saint Dismas Foundation.
         </p>
-        <img src="images/baptism.jpg" class="main-column-img center-block responsive" alt="Inmates jogging along a razor wire fence.">
+        <img src="images/baptism.JPG" class="main-column-img center-block responsive" alt="Deacons baptising an inmate in the prison chapel.">
       </div>
     </div>
   </div>
