--- a/home.html
+++ b/home.html
@@ -17,84 +17,86 @@
   </head>
 
   <body>
-  <div class="navbar-wrapper" id="nav-partial">
-    <nav class="navbar navbar-default navbar-custom">
-      <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="home.html#"><img src="images/logo_small.png" alt="Saint Dismas Prison Ministry Logo"></a>
-        </div>
+    <div class="navbar-wrapper" id="nav-partial">
+      <nav class="navbar navbar-default navbar-custom">
+        <div class="container-fluid">
+          <!-- Brand and toggle get grouped for better mobile display -->
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="home.html#"><img src="images/logo_small.png" class="img-responsive" alt="Saint Dismas Prison Ministry Logo"></a>
+          </div>
 
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav">
-            <li><a href="creed.html">Creed &amp; Vision</a></li>
-            <li><a href="mandate.html">Our Mandate</a></li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Our Work <span class="caret"></span></a>
-              <ul class="dropdown-menu">
-                <li><a href="funds.html">Indigent Inmate Funds</a></li>
-                <li><a href="packages.html">EOS Packages</a></li>
-                <li><a href="fresh-start.html">Fresh Start Program</a></li>
-                <li><a href="family-assistance.html">Family Assistance</a></li>
-                <li role="separator" class="divider"></li>
-                <li><a href="greeting-cards.html">Greeting Card Program</a></li>
-                <li><a href="art-program.html">Art Program</a></li>
-                <li><a href="farm-program.html">Farm Program</a></li>
-                <li><a href="apiary.html">Apiary Program (Bee Keeping)</a></li>
-                <li><a href="sports-equipment.html">Sports Equipment</a></li>
-                <li><a href="santa.html">Santa in Prison</a></li>
-                <li role="separator" class="divider"></li>
-                <li><a href="cvli-license.html">The CVLI License</a></li>
-                <li><a href="literacy-program.html">Literacy Program</a></li>
-                <li><a href="gavel-club.html">Gavel Club (Toastmasters)</a></li>
-                <li><a href="veteran-posts.html">Veteran Posts</a></li>
-                <li><a href="merit-dorm.html">Merit Dorm</a></li>
-                <li><a href="training.html">Educational &amp; Vocational Training</a></li>
-              </ul>
-            </li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">How To Help <span class="caret"></span></a>
-              <ul class="dropdown-menu">
-                <li><a href="donations.html">Donations</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
-                <li role="separator" class="divider"></li>
-                <li><a href="#">Separated link</a></li>
-              </ul>
-            </li>
-            <li><a href="board.html">Board of Directors</a></li>
-          </ul>
-        </div><!-- /.navbar-collapse -->
-      </div><!-- /.container-fluid -->
-    </nav>
-  </div>
-    <div class="row">
-      <div class="col-xs-12">
-        <div class="hero text-center">
-          <h1 class="lead">
-            "LOCK 'EM UP
-            <br>AND THROW AWAY THE KEYS"
-          </h1>
-          <p>
-            That's what most in today's society say about prison inmates...
-          </p>
-          <p>
-            But Jesus mandates something quite diffrent to those who follow him:
-          </p>
-          <p>
-            That we visit them. (Matthew 25;31-36)
-          </p>
+          <!-- Collect the nav links, forms, and other content for toggling -->
+          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+              <li><a href="creed.html">Creed &amp; Vision</a></li>
+              <li><a href="mandate.html">Our Mandate</a></li>
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Our Work <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                  <li><a href="funds.html">Indigent Inmate Funds</a></li>
+                  <li><a href="packages.html">EOS Packages</a></li>
+                  <li><a href="fresh-start.html">Fresh Start Program</a></li>
+                  <li><a href="family-assistance.html">Family Assistance</a></li>
+                  <li role="separator" class="divider"></li>
+                  <li><a href="greeting-cards.html">Greeting Card Program</a></li>
+                  <li><a href="art-program.html">Art Program</a></li>
+                  <li><a href="farm-program.html">Farm Program</a></li>
+                  <li><a href="apiary.html">Apiary Program (Bee Keeping)</a></li>
+                  <li><a href="sports-equipment.html">Sports Equipment</a></li>
+                  <li><a href="santa.html">Santa in Prison</a></li>
+                  <li role="separator" class="divider"></li>
+                  <li><a href="cvli-license.html">The CVLI License</a></li>
+                  <li><a href="literacy-program.html">Literacy Program</a></li>
+                  <li><a href="gavel-club.html">Gavel Club (Toastmasters)</a></li>
+                  <li><a href="veteran-posts.html">Veteran Posts</a></li>
+                  <li><a href="merit-dorm.html">Merit Dorm</a></li>
+                  <li><a href="training.html">Educational &amp; Vocational Training</a></li>
+                </ul>
+              </li>
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">How To Help <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                  <li><a href="donations.html">Donations</a></li>
+                  <li><a href="#">Another action</a></li>
+                  <li><a href="#">Something else here</a></li>
+                  <li role="separator" class="divider"></li>
+                  <li><a href="#">Separated link</a></li>
+                </ul>
+              </li>
+              <li><a href="board.html">Board of Directors</a></li>
+            </ul>
+          </div><!-- /.navbar-collapse -->
+        </div><!-- /.container-fluid -->
+      </nav>
+    </div>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-xs-12">
+          <div class="hero text-center row">
+              <h1 class="lead">
+                "LOCK 'EM UP
+                <br>AND THROW AWAY THE KEYS"
+              </h1>
+              <p>
+                That's what most in today's society say about prison inmates...
+              </p>
+              <p>
+                But Jesus mandates something quite diffrent to those who follow him:
+              </p>
+              <p>
+                That we visit them. (Matthew 25;31-36)
+              </p>
+
+          </div>
         </div>
       </div>
     </div>
-
     <div class="container-fluid">
       <div class="row">
         <div class="col-xs-12 col-sm-4 col-md-3">
@@ -106,7 +108,7 @@
               <br> should not perish but have eternal life.
               <br>&mdash;John 3:16
             </p>
-            <img src="images/jesus_bars_art_small.jpg" alt="Artist rendering of Jesus in Prison, and the cell being locked." />
+            <img src="images/jesus_bars_art_small.jpg" class="img-responsive" alt="Artist rendering of Jesus in Prison, and the cell being locked." />
           </aside>
         </div>
         <div class="col-xs-12 col-sm-8 col-md-9 main-text">
@@ -140,12 +142,12 @@
               <br>&mdash;Matthew 25:36, 40
               <br>
             </p>
-            <img src="images/jesus_bars.JPG" alt="Sketch of Jesus. Black and white." />
+            <img src="images/jesus_bars.JPG" class="img-responsive" alt="Sketch of Jesus. Black and white." />
           </aside>
         </div>
         <div class="col-xs-12 col-sm-8 col-md-9 main-text">
-          <div class="text-center bring-up">
-            <img src="images/reading_bible.jpg" alt="Image of window in prison cell with light streaming through." />
+          <div class="text-center">
+            <img src="images/reading_bible.jpg" class="img-responsive" alt="Image of window in prison cell with light streaming through." />
           </div>
           <p>
             In 2006, recognizing these problems and a lack of programs to build self-esteem as a hindrance to ministering to the inmates, an ordained Roman Catholic Deacon, assigned as a Catholic chaplain to the prison, sought a solution to these problems. With the support of a local judge and few dedicated prison ministers, he founded The Saint Dismas Prison Ministry Foundation, an Internal Revenue Service qualified 501-C3 charitable corporation.
@@ -169,7 +171,7 @@
             </p>
           </div>
           <div class="col-xs-4 text-center">
-            <img src="images/logo_small.png" class="logo" alt="Saint Dismas Prison Ministry Logo" />
+            <img src="images/logo_small.png" class="logo img-responsive" alt="Saint Dismas Prison Ministry Logo" />
           </div>
           <div class="col-xs-4">
             <p class="text-right footer-right">
