--- a/inmate-aid.html
+++ b/inmate-aid.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" type="text/css" href="stylesheets/dismas.css">
   <link href='https://fonts.googleapis.com/css?family=Fredericka+the+Great' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Lato:400,400italic' rel='stylesheet' type='text/css'>
-  <title>Saint Dismas - EOS Packages</title>
+  <title>Saint Dismas - Inmate Aid</title>
 </head>
 
 <body>
@@ -42,11 +42,7 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Our Work <span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><a href="funds.html">Indigent Inmate Funds</a></li>
-                <li><a href="packages.html">EOS Packages</a></li>
-                <li><a href="fresh-start.html">Fresh Start Program</a></li>
-                <li><a href="family-assistance.html">Family Assistance</a></li>
-                <li role="separator" class="divider"></li>
+                <li><a href="inmate-aid.html">Inmate Aid</a></li>
                 <li><a href="greeting-cards.html">Greeting Card Program</a></li>
                 <li><a href="art-program.html">Art Program</a></li>
                 <li><a href="farm-program.html">Farm Program</a></li>
@@ -59,7 +55,6 @@
                 <li><a href="gavel-club.html">Gavel Club (Toastmasters)</a></li>
                 <li><a href="veteran-posts.html">Veteran Posts</a></li>
                 <li><a href="merit-dorm.html">Merit Dorm</a></li>
-                <li><a href="training.html">Educational &amp; Vocational Training</a></li>
               </ul>
             </li>
             <li class="dropdown">
@@ -86,22 +81,40 @@
       <div class="col-xs-12 col-sm-4 col-md-3">
         <aside class="text-center">
           <p>
-            "Remember those in prison,
-            <br>as if you were in prison with them,
-            <br>and those who are mistreated as if
-            <br>you yourselves were suffering.”
-            <br>&mdash;Hebrews 13:3
+            When Jesus was berated for
+            <br>eating with tax collectors and sinners,
+            <br>he answered, "It is not the healthy
+            <br>who need a doctor, but the sick.
+            <br>I have not come to call the righteous,
+            <br>but sinners."&mdash;Mark 2:17
             <br>
           </p>
-          <img src="images/hands_small.jpg" alt="Hands through prison cell bars.">
+          <img src="images/hope.jpg" alt="Razor wire against a blue sky backdrop, with quote, 'There is hope in Christ through prison ministry'.">
         </aside>
       </div>
       <div class="col-xs-12 col-sm-8 col-md-9 main-text">
-        <h1 class="text-center ftg">EOS Packages</h1>
+        <h1 class="text-center ftg">Inmate Aid</h1>
+        <h3 class="ftg">Ingident Funds</h2>
         <p class="bring-down">
+          The Foundation makes direct deposits to the Inmate Trust Fund in the name of qualified indigent inmates (usually $10) to enable them to purchase personal hygeiene supplies (deodorant, toothpaste, shampoo, etc.) which are not supplied by the prison.
+        </p>
+        <h3 class="ftg">EOS Packages</h2>
+        <p>
           This program provides new clothing and shoes purchased to the inmate’s measurements. A bo is provided to the indigent inmates on thier EOS (end of sentence) date. These inmates don't necessarily receive "fresh start" funds. since its inception, 75 inmates have received EOS packages.
         </p>
-          <img src="images/farm2.JPG" class="main-column-img center-block responsive" alt="Group of prisoners, ministers, and staff posing after farm work.">
+        <h3 class="ftg">Fresh Start Program</h2>
+        <p>
+          This program is for ex-offenders who have no resources, have a reasonable chance of success on the outside, and are recommended to us for support. These former inmates receive funds and an EOS package to help them get started. Assistance sometimes includes finding housing when possible and payment their first month's rent.
+        </p>
+        <h3 class="ftg">Family Assistance</h2>
+        <p>
+          On occasion, based on dire need, the Foundation has been able to provide for the needs of inmate spouses and children who were desperate and had no one to turn to.
+        </p>
+        <h3 class="ftg">Educational and Vocational</h2>
+        <p>
+          The Saint Dismas Foundation has paid education or training fees for worthy inmates who have a reasonable chance of success. The most frequent and beneficial has been the water treatment program through the University of California. All are without cost to the inmate student. With the permission of prison officials, we routinely supply Bibles religious DVD's and other religious materials to inmates through the Chapel.
+        </p>
+        <img src="images/confirmation.JPG" class="main-column-img center-block responsive" alt="Two champlains and two prisoners celebrating a confirmation.">
       </div>
     </div>
   </div>
