--- a/mandate.html
+++ b/mandate.html
@@ -42,11 +42,7 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Our Work <span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><a href="funds.html">Indigent Inmate Funds</a></li>
-                <li><a href="packages.html">EOS Packages</a></li>
-                <li><a href="fresh-start.html">Fresh Start Program</a></li>
-                <li><a href="family-assistance.html">Family Assistance</a></li>
-                <li role="separator" class="divider"></li>
+                <li><a href="inmate-aid.html">Inmate Aid</a></li>
                 <li><a href="greeting-cards.html">Greeting Card Program</a></li>
                 <li><a href="art-program.html">Art Program</a></li>
                 <li><a href="farm-program.html">Farm Program</a></li>
@@ -59,7 +55,6 @@
                 <li><a href="gavel-club.html">Gavel Club (Toastmasters)</a></li>
                 <li><a href="veteran-posts.html">Veteran Posts</a></li>
                 <li><a href="merit-dorm.html">Merit Dorm</a></li>
-                <li><a href="training.html">Educational &amp; Vocational Training</a></li>
               </ul>
             </li>
             <li class="dropdown">
@@ -101,10 +96,11 @@
         <p class="bring-down">
           Based on the scriptures, one can clearly infer that if Jesus were on earth today, we would find Him in the prisons, talking and eating with the most loathed criminals and outcasts. He would be there <span class="cursive larger">“to seek and to save the lost”</span> and to restore them to sonship, just as He did with Zacchaeus and so many others.
         </p>
-          <img src="images/hopeless_no_quote.jpg" class="main-column-img center-block responsive" alt="Inmate in despair, sitting in dark cell with head held in hands.">
         <p>
           And because we, the church, are now His representatives on earth, prison is where we should be as well — calling the sick to the healing touch of  Jesus the Savior.    Still recognizing in those inmates, the dignity of God’s creation, no matter how far they have fallen; trusting that no one — NO ONE —is beyond Christ’s power to love , forgive and redeem.
         </p>
+        <img src="images/hopeless_no_quote.jpg" class="main-column-img center-block responsive" alt="Inmate in despair, sitting in dark cell with head held in hands.">
+
       </div>
     </div>
   </div>
