--- a/santa.html
+++ b/santa.html
@@ -42,11 +42,7 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Our Work <span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><a href="funds.html">Indigent Inmate Funds</a></li>
-                <li><a href="packages.html">EOS Packages</a></li>
-                <li><a href="fresh-start.html">Fresh Start Program</a></li>
-                <li><a href="family-assistance.html">Family Assistance</a></li>
-                <li role="separator" class="divider"></li>
+                <li><a href="inmate-aid.html">Inmate Aid</a></li>
                 <li><a href="greeting-cards.html">Greeting Card Program</a></li>
                 <li><a href="art-program.html">Art Program</a></li>
                 <li><a href="farm-program.html">Farm Program</a></li>
@@ -59,7 +55,6 @@
                 <li><a href="gavel-club.html">Gavel Club (Toastmasters)</a></li>
                 <li><a href="veteran-posts.html">Veteran Posts</a></li>
                 <li><a href="merit-dorm.html">Merit Dorm</a></li>
-                <li><a href="training.html">Educational &amp; Vocational Training</a></li>
               </ul>
             </li>
             <li class="dropdown">
